tests/macro/no_attr.stderr
error: Deriving `Endpoint` requires attaching an `endpoint` attribute
 --> tests/macro/no_attr.rs:5:17
  |
5 | #[derive(Debug, Endpoint, Serialize)]
  |                 ^^^^^^^^
  |
  = note: this error originates in the derive macro `Endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `rustified::endpoint::Endpoint`
 --> tests/macro/no_attr.rs:1:5
  |
1 | use rustified::endpoint::Endpoint;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
